--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-8">Customer Service &amp; Moderation</div>
-                <div class="col-sm-4 text-right">Hi Skid (<a href="#" onclick="logout()">logout</a>)</div>
+                <div class="col-sm-4 text-right">Hi, AVeryVeryGreatMan (<a href="#" onclick="logout()">logout</a>)</div>
             </div>
         </div>
     </div>
